# pharmacophore-toolkit

./: .gitignore  README.md  demo_consensus.py  environment.yaml  pyproject.toml  rdkit_pharmacophore.ipynb  similarity_maps.ipynb  similaritymap_from_model.py  test_consensus_pharm.py
app/: Welcome.py  page_settings.yaml  requirements.txt
app/page-apps/: Changelog.py  Home.py  Molecule-Sketcher.py  Protein.py
img/: tutorial_example.pse
pharmacophore/: aromaticity.py  constants.py  draw.py  pharmacophore.py
tutorial/: pharmacophore_tutorial.ipynb  similarity_maps.ipynb
tutorial/data/: pharma.pml
tutorials/: consensus_pharmacophore_tutorial.ipynb  pharmacophore_tutorial.ipynb
tutorials/data/: CCR2_reference_ligands.sdf
