[tool.poetry]
name = "pharmacophore-toolkit"
version = "0.1.0"
description = "A simple pharmacophore modeling toolkit"
authors = ["Tony Eight Lin <tonyelin@tmu.edu.tw>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "pharmacophore"}]

[tool.poetry.dependencies]
python = ">=3.9"
datamol = ">=0.10.0, <1.0"
pandas = ">=2.0.0, <3.0"
nglview = ">=3.0.0, <4.0"
cairosvg = ">=2.7.1, <3.0"
notebook = ">=7.0.0, <8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
